trybuild_tests/test_compile_fail_four.stderr
error[E0271]: type mismatch resolving `<UInt<UInt<UTerm, B1>, B0> as IsLess>::Output == B1`
  --> trybuild_tests/test_compile_fail_four.rs:24:59
   |
24 |     let (_cloned_secret, returned_value) = _cloned_secret.expose_secret(|exposed_secret| {
   |                                                           ^^^^^^^^^^^^^ expected `B1`, found `B0`
   |
note: required by a bound in `expose_secret`
  --> src/traits.rs
   |
   |     fn expose_secret<ReturnType, ClosureType>(self, scope: ClosureType) -> (Self::Next, ReturnType)
   |        ------------- required by a bound in this associated function
...
   |         EC: Add<U1> + IsLess<MEC, Output = True>,
   |                                   ^^^^^^^^^^^^^ required by this bound in `ExposeSecret::expose_secret`
